@@ -71,6 +71,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * installer: hide errors returned when trying to dl() mysql.so / pgsql.so
 * installer: cleanly outputbuffer when dieing out
 * Add $wgReservedUsernames configuration directive to block account creation/use
+* (bug 5576) Remove debugging hack in session check
+
 
 == Compatibility ==
 
